[gd_scene load_steps=12 format=3 uid="uid://15hyxpf00c4q"]

[ext_resource type="Script" path="res://scenes/combat_unit_view.gd" id="1_gjs17"]
[ext_resource type="Texture2D" uid="uid://dtufnt1cu850q" path="res://sprites/InfoFrame.png" id="2_31mo5"]
[ext_resource type="Texture2D" uid="uid://dgw8aqpewhqx0" path="res://sprites/Commanders/Smiley.png" id="3_4dsnu"]
[ext_resource type="Texture2D" uid="uid://dus34kqbtb8gr" path="res://sprites/Icons/healthbar.png" id="4_03xor"]
[ext_resource type="Script" path="res://scenes/TargetIndicator.gd" id="5_214yl"]
[ext_resource type="Texture2D" uid="uid://dn5gy10sisr24" path="res://sprites/Icons/double_arrow_blue.png" id="6_ovxp1"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cjf6i"]
texture = ExtResource("2_31mo5")

[sub_resource type="CanvasTexture" id="CanvasTexture_jm5mh"]

[sub_resource type="Animation" id="Animation_s22f3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [20.0]
}

[sub_resource type="Animation" id="Animation_mph2m"]
resource_name = "wobble_right"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [15, 10, 20, 15]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7gsoy"]
_data = {
"RESET": SubResource("Animation_s22f3"),
"wobble_right": SubResource("Animation_mph2m")
}

[node name="PlayerUnitView" type="Control"]
custom_minimum_size = Vector2(456, 227)
layout_mode = 3
anchors_preset = 0
offset_right = 456.0
offset_bottom = 227.0
script = ExtResource("1_gjs17")

[node name="UnitBox" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
offset_right = 373.0
offset_bottom = 226.0
theme_override_styles/panel = SubResource("StyleBoxTexture_cjf6i")

[node name="portrait_box" type="TextureRect" parent="UnitBox"]
layout_mode = 0
offset_left = 12.0
offset_top = 39.0
offset_right = 166.0
offset_bottom = 186.0
texture = SubResource("CanvasTexture_jm5mh")

[node name="portrait" type="TextureRect" parent="UnitBox/portrait_box"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
offset_left = 23.0
offset_top = 15.0
offset_right = 130.0
offset_bottom = 128.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("3_4dsnu")

[node name="CommanderName" type="Label" parent="UnitBox"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 12.0
offset_top = 12.0
offset_right = 159.0
offset_bottom = 35.0
text = "Commander Name"

[node name="HealthInfo" type="VBoxContainer" parent="UnitBox"]
layout_mode = 0
offset_left = 171.0
offset_top = 167.0
offset_right = 363.0
offset_bottom = 221.0
alignment = 1

[node name="HealthBar" type="TextureProgressBar" parent="UnitBox/HealthInfo"]
unique_name_in_owner = true
layout_mode = 2
value = 100.0
texture_progress = ExtResource("4_03xor")

[node name="UnitCount" type="Label" parent="UnitBox/HealthInfo"]
unique_name_in_owner = true
layout_mode = 2
text = "0 / 100"
horizontal_alignment = 1

[node name="clickbox" type="Button" parent="UnitBox"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -10.0
offset_right = -10.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Attacks" type="VBoxContainer" parent="UnitBox"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 176.0
offset_top = 10.0
offset_right = 401.0
offset_bottom = 157.0
scale = Vector2(0.822905, 1.02597)

[node name="attack1" type="Button" parent="UnitBox/Attacks"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
text = "Attack 1"

[node name="attack2" type="Button" parent="UnitBox/Attacks"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
text = "Attack 2"

[node name="attack3" type="Button" parent="UnitBox/Attacks"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
text = "Attack 3"

[node name="TargetIndicator" type="TextureRect" parent="UnitBox"]
unique_name_in_owner = true
visible = false
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_vertical = 2
script = ExtResource("5_214yl")

[node name="arrows" type="TextureRect" parent="UnitBox/TargetIndicator"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
offset_left = 20.0
grow_vertical = 2
pivot_offset = Vector2(28.5, 28.5)
texture = ExtResource("6_ovxp1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="UnitBox/TargetIndicator/arrows"]
libraries = {
"": SubResource("AnimationLibrary_7gsoy")
}
autoplay = "wobble_right"

[connection signal="mouse_entered" from="UnitBox" to="." method="hover"]
[connection signal="mouse_exited" from="UnitBox" to="." method="unhover"]
[connection signal="pressed" from="UnitBox/clickbox" to="." method="general_click"]
[connection signal="pressed" from="UnitBox/Attacks/attack1" to="." method="ability1"]
[connection signal="pressed" from="UnitBox/Attacks/attack2" to="." method="ability2"]
[connection signal="pressed" from="UnitBox/Attacks/attack3" to="." method="ability3"]
